address low contrast issue for WCAG 2.1 AA

--- a/styles/pages/_item.scss
+++ b/styles/pages/_item.scss
@@ -14,6 +14,7 @@ body.items.show {
   table {
     border-spacing: 1rem;
     border-collapse: separate;
+
     tbody tr {
       th {
         vertical-align: top;
@@ -31,13 +32,14 @@ body.items.show {
   margin: 1em 0;
 }
 
-.transcript-toggle:checked ~ #show-transcript {
+.transcript-toggle:checked~#show-transcript {
   display: block;
 }
 
 .item-file.image-jpeg {
   text-align: center;
   margin: 2em 0;
+
   img {
     max-height: 30em;
     max-width: 100%;
@@ -47,8 +49,9 @@ body.items.show {
 .outputs {
   padding: 1rem;
   border-radius: 4px;
-  background: grey;
+  border: 2px grey solid;
   margin: 1rem;
+
   h3 {
     margin: 0;
   }
